Actualización y microoptimización en challenge_1

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -44,7 +44,7 @@
         </nav>
     </header>
 
-    <div id="root"></div>
+    <div class="bg-secondary" id="root"></div>
 
     <footer class="container-fluid p-5 mx-auto my-5 border border-2 border-danger bg-dark text-center text-white">
         <span class="fs-1">Lauta Sch</span>
