--- a/challenge_1/modes_SPA/mode_edit.html
+++ b/challenge_1/modes_SPA/mode_edit.html
@@ -1,4 +1,4 @@
-<div class="container-fluid m-0 p-5 border border-2 border-warning bg-dark">
+<div class="container-fluid m-0 p-5 border border-2 border-warning bg-dark text-white text-center">
     BANNER
 </div>
 
